[gd_scene load_steps=13 format=3]

[ext_resource type="Script" path="res://Script/Level/Boat.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://g7pf1cy6e2st" path="res://Art/Level/Level_11/Boat.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dve1y7nlo4utg" path="res://Art/Level/Level_11/sw.png" id="3"]
[ext_resource type="PackedScene" uid="uid://b7i0wieq2te7w" path="res://Scene/Monster/Monster_47.tscn" id="4"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource( "3" )
region = Rect2(1173, 0, 391, 89)
script = null

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource( "3" )
region = Rect2(1564, 0, 391, 89)
script = null

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource( "3" )
region = Rect2(0, 0, 391, 89)
script = null

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource( "3" )
region = Rect2(782, 0, 391, 89)
script = null

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource( "3" )
region = Rect2(391, 0, 391, 89)
script = null

[sub_resource type="SpriteFrames" id="6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource( "1" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "3" )
}, {
"duration": 1.0,
"texture": SubResource( "4" )
}, {
"duration": 1.0,
"texture": SubResource( "5" )
}],
"loop": true,
"name": &"sw",
"speed": 7.0
}]
script = null

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(330, 84)
script = null

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(330, 86)
script = null

[node name="Boat" type="Node2D"]
script = ExtResource( "1" )

[node name="Boat" type="Sprite2D" parent="."]
texture = ExtResource( "2" )

[node name="SpecialEffect" type="AnimatedSprite2D" parent="."]
position = Vector2(5, 132)
sprite_frames = SubResource( "6" )
animation = &"sw"
autoplay = "sw"
frame_progress = 0.17673
metadata/_edit_lock_ = true

[node name="body" type="StaticBody2D" parent="."]

[node name="ct" type="CollisionShape2D" parent="body"]
position = Vector2(-18, 95)
shape = SubResource( "7" )
metadata/_edit_lock_ = true

[node name="Monster_47" parent="." instance=ExtResource( "4" )]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-17, 94)
shape = SubResource( "8" )
metadata/_edit_lock_ = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered" flags=18]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered" flags=18]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited" flags=18]
